[package]
name = "devstats-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
colored = "2.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
